# RigorousNeuralNetworkSimulations

./: README.md
C_model/data/: pythonConWeightDelay_after1h.py  pythonConWeightDelay_after2h.py  pythonConWeightDelay_after3h.py  pythonConWeightDelay_after4h.py  pythonConWeightDelay_after5h.py
C_model/src/: CMakeLists.txt  globals.h  main.cpp  params.h  params_create_5_selected_states.h  params_simulate_selected_state_1.h  params_simulate_selected_state_2.h  params_simulate_selected_state_3.h  params_simulate_selected_state_4.h  params_simulate_selected_state_5.h  poly_spnet.cpp  utils.cpp  utils.h
Evaluate_ODE_solver_implementations/: README.md
Evaluate_ODE_solver_implementations/src/: CMakeLists.txt  izhikevich.cpp  izhikevich.h  izhikevich_model.h  ode_solvers.h  run.sh
NEST_model/: izhikevich_two_population_network.py  networkConnectivity.py
NEST_model/results/: benchmark_1_thread.txt  benchmark_4_threads.txt
SpiNNaker_model/C/: neuron_model_izh_impl.c
SpiNNaker_model/PyNN/: polychronizationNetwork.py  singleNeuronDynamics.py
